--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <section class="header-section">
 	<div class="center-div">
-		<h1 class="font-weight-bold">Play more,Win more with INDIA11</h1>
+		<h1 class="font-weight-bold">PLAY more,Win more with INDIA11</h1>
 		<p>Download INDIA11 Android Application</p>
 		<div class="header-buttons">
 			<a href="https://firebasestorage.googleapis.com/v0/b/india11fantasy-bb723.appspot.com/o/I-11%20Admin.apk?alt=media&token=4f234999-e837-4a23-a9c2-4cec618dfacd
