--- a/index.html
+++ b/index.html
@@ -525,6 +525,10 @@
         <p>© 2021 INDIA11. All Rights Reserved. 
         
       </div>
+      <div class="scrolltop float-right">
+        <p class="fa fa-arrow-up" onclick="topFunction()" id="myBtn"></p>
+        
+      </div>
 
   </div>
   </div>
